api 三种类型组件v1

--- a/DO-API/source/view/UI/do_ExpandableListView/main.ui
+++ b/DO-API/source/view/UI/do_ExpandableListView/main.ui
@@ -1,1 +1,76 @@
-{"RootView":{"x":"0","width":"750","y":"0","type":"do_ALayout","height":"1334"}}
+{
+	"RootView":{
+		"bgColor":"FFFFFFFF",
+		"width":"750",
+		"id":"ALayout_1",
+		"type":"do_ALayout",
+		"views":[
+			{
+				"bgColor":"F1F1F1FF",
+				"childTemplate":"source://view/UI/do_ExpandableListView/test2.ui",
+				"width":"750",
+				"y":"200",
+				"groupTemplate":"source://view/UI/do_ExpandableListView/test1.ui",
+				"id":"do_ExpandableListView_1",
+				"selectedColor":"9B9B9BFF",
+				"type":"do_ExpandableListView",
+				"height":"599"
+			},
+			{
+				"bgColor":"00000000",
+				"width":"750",
+				"y":"100",
+				"fontSize":"30",
+				"id":"do_Label_2",
+				"text":"中国省份大全",
+				"type":"do_Label",
+				"height":"84"
+			},
+			{
+				"bgColor":"00000000",
+				"width":"702",
+				"x":"20",
+				"y":"854",
+				"fontSize":"20",
+				"id":"do_Label_3",
+				"type":"do_Label",
+				"fontColor":"000080FF"
+			},
+			{
+				"bgColor":"00000000",
+				"width":"704",
+				"x":"20",
+				"y":"932",
+				"fontSize":"20",
+				"id":"do_Label_4",
+				"type":"do_Label",
+				"fontColor":"000080FF"
+			},
+			{
+				"bgColor":"DDDDDDFF",
+				"width":"258",
+				"x":"58",
+				"y":"1118",
+				"id":"do_Button_1",
+				"text":"展开第一组数据",
+				"type":"do_Button"
+			},
+			{
+				"bgColor":"E2E2E2FF",
+				"width":"290",
+				"x":"414",
+				"y":"1112",
+				"id":"do_Button_2",
+				"text":"收缩第一组数据",
+				"type":"do_Button"
+			},
+			{
+				"x":"506",
+				"y":"1258",
+				"id":"do_WebView_1",
+				"type":"do_WebView"
+			}
+		],
+		"height":"1334"
+	}
+}
