--- a/DO-API/source/view/index.ui
+++ b/DO-API/source/view/index.ui
@@ -6,28 +6,28 @@
 		"type":"do_ALayout",
 		"views":[
 			{
-				"bgColor":"64B1FFFF",
+				"bgColor":"184682FF",
 				"width":"750",
 				"id":"lay1",
 				"type":"do_ALayout",
 				"views":[
 					{
-						"x":"35",
-						"width":"85",
-						"y":"25",
+						"x":"30",
+						"width":"62",
+						"y":"19",
 						"id":"img1",
-						"source":"source://image/common/back.jpg",
+						"source":"source://image/common/back.png",
 						"type":"do_ImageView",
 						"enabled":"true",
-						"height":"53"
+						"height":"62"
 					},
 					{
 						"bgColor":"00000000",
 						"textAlign":"center",
-						"x":"204",
-						"width":"404",
-						"y":"1",
-						"fontSize":"30",
+						"x":"140",
+						"width":"470",
+						"y":"5",
+						"fontSize":"40",
 						"text":"示例代码",
 						"type":"do_Label",
 						"fontStyle":"bold",
@@ -35,15 +35,15 @@
 						"height":"100"
 					}
 				],
-				"height":"100"
+				"height":"110"
 			},
 			{
 				"templates":"source://view/cell/i0.ui",
 				"width":"750",
-				"y":"100",
+				"y":"110",
 				"id":"list1",
 				"type":"do_ListView",
-				"height":"1232"
+				"height":"1224"
 			}
 		],
 		"height":"1334"
