--- a/DO-API/source/view/UI/do_GridView/main.ui
+++ b/DO-API/source/view/UI/do_GridView/main.ui
@@ -33,11 +33,15 @@
 						"height":"-1"
 					},
 					{
+						"linesSpace":"13",
 						"margin":"10,0,15,0",
 						"width":"700",
 						"y":"114",
+						"maxLines":"3",
+						"fontSize":"27",
 						"id":"do_Label_3",
 						"type":"do_Label",
+						"fontColor":"666666FF",
 						"height":"-1"
 					},
 					{
@@ -49,9 +53,61 @@
 						"height":"2"
 					},
 					{
-						"templates":"source://view/cell/do_gridview/gridview0.ui",
 						"width":"700",
 						"y":"130",
+						"fontSize":"34",
+						"id":"do_Label_4",
+						"text":"事件描述",
+						"type":"do_Label"
+					},
+					{
+						"linesSpace":"13",
+						"width":"700",
+						"y":"210",
+						"maxLines":"20",
+						"fontSize":"30",
+						"id":"do_Label_5",
+						"type":"do_Label",
+						"fontColor":"666666FF",
+						"height":"-1"
+					},
+					{
+						"linesSpace":"13",
+						"margin":"10,0,10,0",
+						"width":"700",
+						"y":"219",
+						"maxLines":"20",
+						"fontSize":"30",
+						"id":"do_Label_6",
+						"type":"do_Label",
+						"fontColor":"666666FF",
+						"height":"-1"
+					},
+					{
+						"linesSpace":"13",
+						"width":"700",
+						"y":"228",
+						"maxLines":"20",
+						"fontSize":"30",
+						"id":"do_Label_7",
+						"tag":"10,0,10,0",
+						"type":"do_Label",
+						"fontColor":"666666FF",
+						"height":"-1"
+					},
+					{
+						"width":"700",
+						"y":"227",
+						"fontSize":"34",
+						"id":"do_Label_8",
+						"text":"示例展示",
+						"type":"do_Label"
+					},
+					{
+						"isHeaderVisible":"true",
+						"templates":"source://view/cell/do_gridview/gridview0.ui",
+						"width":"700",
+						"y":"307",
 						"id":"do_GridView_1",
 						"type":"do_GridView",
 						"numColumns":"4",
