gridview 只有效果，没说明。

--- a/DO-API/source/view/UI/do_GridView/main.ui
+++ b/DO-API/source/view/UI/do_GridView/main.ui
@@ -1,122 +1,13 @@
 {
 	"RootView":{
-		"x":"0",
+		"isHeaderVisible":"true",
+		"bgColor":"FFFFFFFF",
+		"templates":"source://view/cell/do_gridview/gridview0.ui",
 		"width":"750",
-		"y":"0",
-		"type":"do_ALayout",
-		"views":[
-			{
-				"x":"25",
-				"width":"700",
-				"y":"25",
-				"id":"do_LinearLayout_1",
-				"type":"do_LinearLayout",
-				"views":[
-					{
-						"width":"700",
-						"fontSize":"34",
-						"id":"do_Label1",
-						"text":"组件描述",
-						"type":"do_Label",
-						"fontColor":"080808FF"
-					},
-					{
-						"linesSpace":"13",
-						"margin":"10,0,15,0",
-						"width":"700",
-						"y":"90",
-						"maxLines":"10",
-						"fontSize":"30",
-						"id":"do_Label_2",
-						"type":"do_Label",
-						"fontColor":"666666FF",
-						"height":"-1"
-					},
-					{
-						"linesSpace":"13",
-						"margin":"10,0,15,0",
-						"width":"700",
-						"y":"114",
-						"maxLines":"3",
-						"fontSize":"27",
-						"id":"do_Label_3",
-						"type":"do_Label",
-						"fontColor":"666666FF",
-						"height":"-1"
-					},
-					{
-						"border":"CCCCCCFF,1,[0,0,0,0]",
-						"width":"700",
-						"y":"128",
-						"id":"do_ALayout_1",
-						"type":"do_ALayout",
-						"height":"2"
-					},
-					{
-						"width":"700",
-						"y":"130",
-						"fontSize":"34",
-						"id":"do_Label_4",
-						"text":"事件描述",
-						"type":"do_Label"
-					},
-					{
-						"linesSpace":"13",
-						"width":"700",
-						"y":"210",
-						"maxLines":"20",
-						"fontSize":"30",
-						"id":"do_Label_5",
-						"type":"do_Label",
-						"fontColor":"666666FF",
-						"height":"-1"
-					},
-					{
-						"linesSpace":"13",
-						"margin":"10,0,10,0",
-						"width":"700",
-						"y":"219",
-						"maxLines":"20",
-						"fontSize":"30",
-						"id":"do_Label_6",
-						"type":"do_Label",
-						"fontColor":"666666FF",
-						"height":"-1"
-					},
-					{
-						"linesSpace":"13",
-						"width":"700",
-						"y":"228",
-						"maxLines":"20",
-						"fontSize":"30",
-						"id":"do_Label_7",
-						"tag":"10,0,10,0",
-						"type":"do_Label",
-						"fontColor":"666666FF",
-						"height":"-1"
-					},
-					{
-						"width":"700",
-						"y":"227",
-						"fontSize":"34",
-						"id":"do_Label_8",
-						"text":"示例展示",
-						"type":"do_Label"
-					},
-					{
-						"isHeaderVisible":"true",
-						"templates":"source://view/cell/do_gridview/gridview0.ui",
-						"width":"700",
-						"y":"307",
-						"id":"do_GridView_1",
-						"type":"do_GridView",
-						"numColumns":"4",
-						"height":"-1"
-					}
-				],
-				"height":"-1"
-			}
-		],
-		"height":"-1"
+		"id":"do_GridView_1",
+		"type":"do_GridView",
+		"selectedColor":"FF0080FF",
+		"numColumns":"4",
+		"height":"1224"
 	}
 }
