--- a/DO-API/source/view/UI/do_ExpandableListView/main.ui
+++ b/DO-API/source/view/UI/do_ExpandableListView/main.ui
@@ -1,74 +1,28 @@
 {
 	"RootView":{
-		"bgColor":"FFFFFFFF",
+		"x":"0",
 		"width":"750",
-		"id":"ALayout_1",
+		"y":"0",
 		"type":"do_ALayout",
 		"views":[
 			{
-				"bgColor":"F1F1F1FF",
-				"childTemplate":"source://view/UI/do_ExpandableListView/test2.ui",
-				"width":"750",
-				"y":"200",
-				"groupTemplate":"source://view/UI/do_ExpandableListView/test1.ui",
-				"id":"do_ExpandableListView_1",
-				"selectedColor":"9B9B9BFF",
-				"type":"do_ExpandableListView",
-				"height":"599"
-			},
-			{
-				"bgColor":"00000000",
-				"width":"750",
-				"y":"100",
-				"fontSize":"30",
-				"id":"do_Label_2",
-				"text":"中国省份大全",
-				"type":"do_Label",
-				"height":"84"
-			},
-			{
-				"bgColor":"00000000",
-				"width":"702",
-				"x":"20",
-				"y":"854",
-				"fontSize":"20",
-				"id":"do_Label_3",
-				"type":"do_Label",
-				"fontColor":"000080FF"
-			},
-			{
-				"bgColor":"00000000",
-				"width":"704",
-				"x":"20",
-				"y":"932",
-				"fontSize":"20",
-				"id":"do_Label_4",
-				"type":"do_Label",
-				"fontColor":"000080FF"
-			},
-			{
-				"bgColor":"DDDDDDFF",
-				"width":"258",
-				"x":"58",
-				"y":"1118",
+				"bgColor":"9E9E9EFF",
+				"x":"100",
+				"width":"205",
+				"y":"280",
 				"id":"do_Button_1",
-				"text":"展开第一组数据",
-				"type":"do_Button"
+				"text":"查看效果",
+				"type":"do_Button",
+				"height":"64"
 			},
 			{
-				"bgColor":"E2E2E2FF",
-				"width":"290",
-				"x":"414",
-				"y":"1112",
-				"id":"do_Button_2",
-				"text":"收缩第一组数据",
-				"type":"do_Button"
-			},
-			{
-				"x":"506",
-				"y":"1258",
-				"id":"do_WebView_1",
-				"type":"do_WebView"
+				"x":"10",
+				"width":"730",
+				"y":"100",
+				"fontSize":"25",
+				"id":"do_Label_1",
+				"text":"当前组件比较复杂，新页查看效果",
+				"type":"do_Label"
 			}
 		],
 		"height":"1334"
