--- a/DO-API/source/view/SM/do_Device/main.ui
+++ b/DO-API/source/view/SM/do_Device/main.ui
@@ -1,19 +1,225 @@
 {
 	"RootView":{
+		"bgColor":"00000000",
 		"x":"0",
 		"width":"750",
 		"y":"0",
 		"type":"do_ALayout",
 		"views":[
 			{
-				"x":"10",
+				"bgColor":"C1BFC8FF",
+				"x":"50",
+				"width":"270",
+				"y":"240",
+				"fontSize":"20",
+				"id":"do_Button_1",
+				"text":"getGPSInfo获取设备GPS信息",
+				"type":"do_Button",
+				"height":"50"
+			},
+			{
+				"bgColor":"C1BFC8FF",
+				"x":"390",
+				"width":"270",
+				"y":"240",
+				"fontSize":"20",
+				"id":"do_Button_2",
+				"text":"beep系统通知提示音",
+				"type":"do_Button",
+				"height":"50"
+			},
+			{
+				"bgColor":"00C000FF",
+				"x":"20",
 				"width":"730",
-				"y":"100",
-				"maxLines":"2",
+				"y":"300",
+				"id":"do_ALayout_1",
+				"type":"do_ALayout",
+				"height":"2"
+			},
+			{
+				"bgColor":"C1BFC8FF",
+				"x":"50",
+				"width":"270",
+				"y":"330",
+				"fontSize":"20",
+				"id":"do_Button_3",
+				"text":"screenShot截屏",
+				"type":"do_Button",
+				"height":"50"
+			},
+			{
+				"bgColor":"C1BFC8FF",
+				"x":"390",
+				"width":"270",
+				"y":"330",
+				"fontSize":"20",
+				"id":"do_Button_4",
+				"text":"srceenShotAsBitmap截屏",
+				"type":"do_Button",
+				"height":"50"
+			},
+			{
+				"bgColor":"0093E7FF",
+				"x":"20",
+				"width":"730",
+				"y":"390",
+				"id":"do_ALayout_2",
+				"type":"do_ALayout",
+				"height":"2"
+			},
+			{
+				"bgColor":"C1BFC8FF",
+				"x":"50",
+				"width":"270",
+				"y":"420",
+				"fontSize":"20",
+				"id":"do_Button_5",
+				"text":"flash开关闪光灯",
+				"type":"do_Button",
+				"height":"50"
+			},
+			{
+				"bgColor":"C1BFC8FF",
+				"x":"390",
+				"width":"270",
+				"y":"420",
+				"fontSize":"20",
+				"id":"do_Button_6",
+				"text":"getAllAppInfo获取应用信息",
+				"type":"do_Button",
+				"height":"50"
+			},
+			{
+				"bgColor":"BEBD00FF",
+				"x":"20",
+				"width":"730",
+				"y":"480",
+				"id":"do_ALayout_3",
+				"type":"do_ALayout",
+				"height":"2"
+			},
+			{
+				"bgColor":"C1BFC8FF",
+				"x":"50",
+				"width":"270",
+				"y":"510",
+				"fontSize":"20",
+				"id":"do_Button_7",
+				"text":"getBattery\t获取电量",
+				"type":"do_Button",
+				"height":"50"
+			},
+			{
+				"bgColor":"C1BFC8FF",
+				"x":"390",
+				"width":"270",
+				"y":"510",
+				"fontSize":"20",
+				"id":"do_Button_8",
+				"text":"getInfo获取设备信息",
+				"type":"do_Button",
+				"height":"50"
+			},
+			{
+				"bgColor":"00CD00FF",
+				"x":"20",
+				"width":"730",
+				"y":"570",
+				"id":"do_ALayout_4",
+				"type":"do_ALayout",
+				"height":"2"
+			},
+			{
+				"bgColor":"C1BFC8FF",
+				"x":"50",
+				"width":"270",
+				"y":"600",
+				"fontSize":"20",
+				"id":"do_Button_9",
+				"text":"getLocale获取系统环境",
+				"type":"do_Button",
+				"height":"50"
+			},
+			{
+				"bgColor":"C1BFC8FF",
+				"x":"390",
+				"width":"270",
+				"y":"600",
+				"fontSize":"20",
+				"id":"do_Button_10",
+				"text":"home应用退到后台",
+				"type":"do_Button",
+				"height":"50"
+			},
+			{
+				"bgColor":"009ADEFF",
+				"x":"20",
+				"width":"730",
+				"y":"660",
+				"id":"do_ALayout_5",
+				"type":"do_ALayout",
+				"height":"2"
+			},
+			{
+				"bgColor":"C1BFC8FF",
+				"x":"50",
+				"width":"270",
+				"y":"690",
+				"fontSize":"20",
+				"id":"do_Button_11",
+				"text":"setScreenAutoDarken控制锁屏",
+				"type":"do_Button",
+				"height":"50"
+			},
+			{
+				"bgColor":"C1BFC8FF",
+				"x":"390",
+				"width":"270",
+				"y":"690",
+				"fontSize":"20",
+				"id":"do_Button_12",
+				"text":"vibrate振动\t",
+				"type":"do_Button",
+				"height":"50"
+			},
+			{
+				"bgColor":"00D200FF",
+				"x":"20",
+				"width":"730",
+				"y":"750",
+				"id":"do_ALayout_6",
+				"type":"do_ALayout",
+				"height":"2"
+			},
+			{
+				"x":"58",
+				"width":"601",
+				"y":"786",
+				"maxLines":"15",
 				"fontSize":"24",
-				"id":"do_Label_1",
-				"text":"do_Device：设备辅助功能，获取设备系统相关信息、提示音、震动、闪光灯、截屏等",
-				"type":"do_Label"
+				"id":"do_Label_2",
+				"type":"do_Label",
+				"height":"-1"
+			},
+			{
+				"width":"750",
+				"y":"60",
+				"id":"do_ALayout_7",
+				"type":"do_ALayout",
+				"views":[
+					{
+						"x":"10",
+						"width":"730",
+						"y":"16",
+						"maxLines":"2",
+						"fontSize":"24",
+						"id":"do_Label_1",
+						"text":"do_Device：设备辅助功能，获取设备系统相关信息、提示音、震动、闪光灯、截屏等",
+						"type":"do_Label"
+					}
+				],
+				"height":"133"
 			}
 		],
 		"height":"1334"
