--- a/DO-API/source/view/SM/do_External/main.ui
+++ b/DO-API/source/view/SM/do_External/main.ui
@@ -1,8 +1,7 @@
 {
 	"RootView":{
-		"x":"0",
+		"bgColor":"00000000",
 		"width":"750",
-		"y":"0",
 		"type":"do_ALayout",
 		"views":[
 			{
@@ -15,12 +14,168 @@
 				"type":"do_Label"
 			},
 			{
-				"x":"60",
-				"width":"200",
-				"y":"240",
+				"bgColor":"9C9C9CFF",
+				"x":"50",
+				"width":"250",
+				"y":"250",
+				"fontSize":"24",
 				"id":"do_Button_1",
+				"text":"发送短信",
 				"type":"do_Button",
 				"height":"60"
+			},
+			{
+				"bgColor":"B3B3B3FF",
+				"x":"450",
+				"width":"250",
+				"y":"250",
+				"fontSize":"24",
+				"id":"do_Button_2",
+				"text":"应用是否安装",
+				"type":"do_Button",
+				"height":"60"
+			},
+			{
+				"bgColor":"C8C8C8FF",
+				"x":"50",
+				"width":"250",
+				"y":"340",
+				"fontSize":"24",
+				"id":"do_Button_3",
+				"text":"安装app",
+				"type":"do_Button",
+				"height":"60"
+			},
+			{
+				"bgColor":"C8C8C8FF",
+				"x":"450",
+				"width":"250",
+				"y":"340",
+				"fontSize":"24",
+				"id":"do_Button_4",
+				"text":"启动第三方应用",
+				"type":"do_Button",
+				"height":"60"
+			},
+			{
+				"bgColor":"C7C7C7FF",
+				"x":"50",
+				"width":"250",
+				"y":"430",
+				"fontSize":"24",
+				"id":"do_Button_5",
+				"text":"通讯录界面",
+				"type":"do_Button",
+				"height":"60"
+			},
+			{
+				"bgColor":"C7C7C7FF",
+				"x":"450",
+				"width":"250",
+				"y":"430",
+				"fontSize":"24",
+				"id":"do_Button_6",
+				"text":"拨号界面",
+				"type":"do_Button",
+				"height":"60"
+			},
+			{
+				"bgColor":"C7C7C7FF",
+				"x":"50",
+				"width":"250",
+				"y":"520",
+				"fontSize":"24",
+				"id":"do_Button_7",
+				"text":"外部文档",
+				"type":"do_Button",
+				"height":"60"
+			},
+			{
+				"bgColor":"C7C7C7FF",
+				"x":"450",
+				"width":"250",
+				"y":"520",
+				"fontSize":"24",
+				"id":"do_Button_8",
+				"text":"发送邮件界面",
+				"type":"do_Button",
+				"height":"60"
+			},
+			{
+				"bgColor":"C7C7C7FF",
+				"x":"50",
+				"width":"250",
+				"y":"610",
+				"fontSize":"24",
+				"id":"do_Button_9",
+				"text":"系统设置界面",
+				"type":"do_Button",
+				"height":"60"
+			},
+			{
+				"bgColor":"C7C7C7FF",
+				"x":"50",
+				"width":"650",
+				"y":"838",
+				"id":"do_Button_10",
+				"text":"默认浏览器\t",
+				"type":"do_Button",
+				"height":"57"
+			},
+			{
+				"bgColor":"C7C7C7FF",
+				"x":"450",
+				"width":"250",
+				"y":"610",
+				"fontSize":"24",
+				"id":"do_Button_11",
+				"text":"单个短信",
+				"type":"do_Button",
+				"height":"60"
+			},
+			{
+				"bgColor":"53B997FF",
+				"x":"20",
+				"width":"730",
+				"y":"320",
+				"id":"do_ALayout_1",
+				"type":"do_ALayout",
+				"height":"2"
+			},
+			{
+				"x":"20",
+				"width":"730",
+				"y":"410",
+				"id":"do_ALayout_2",
+				"type":"do_ALayout",
+				"height":"2"
+			},
+			{
+				"bgColor":"9BBA54FF",
+				"x":"20",
+				"width":"730",
+				"y":"500",
+				"id":"do_ALayout_3",
+				"type":"do_ALayout",
+				"height":"2"
+			},
+			{
+				"bgColor":"81AA84FF",
+				"x":"20",
+				"width":"730",
+				"y":"590",
+				"id":"do_ALayout_4",
+				"type":"do_ALayout",
+				"height":"2"
+			},
+			{
+				"bgColor":"938050FF",
+				"x":"20",
+				"width":"730",
+				"y":"680",
+				"id":"do_ALayout_5",
+				"type":"do_ALayout",
+				"height":"2"
 			}
 		],
 		"height":"1334"
