--- a/DO-API/source/view/SM/do_Audio/main.ui
+++ b/DO-API/source/view/SM/do_Audio/main.ui
@@ -17,25 +17,99 @@
 			},
 			{
 				"bgColor":"818BD0FF",
-				"x":"76",
-				"width":"169",
-				"y":"230",
+				"x":"45",
+				"width":"200",
+				"y":"200",
 				"fontSize":"24",
 				"id":"do_Button_1",
-				"text":"录音",
+				"text":"开始录音",
 				"type":"do_Button",
 				"height":"60"
 			},
 			{
 				"bgColor":"818BD0FF",
-				"x":"383",
-				"width":"180",
-				"y":"230",
+				"x":"275",
+				"width":"200",
+				"y":"200",
 				"fontSize":"24",
 				"id":"do_Button_2",
-				"text":"播放",
+				"text":"暂停录音",
 				"type":"do_Button",
 				"height":"60"
+			},
+			{
+				"bgColor":"818BD0FF",
+				"x":"505",
+				"width":"200",
+				"y":"200",
+				"fontSize":"24",
+				"id":"do_Button_3",
+				"text":"结束录音",
+				"type":"do_Button",
+				"height":"60"
+			},
+			{
+				"bgColor":"D7D7D7FF",
+				"x":"150",
+				"width":"450",
+				"y":"300",
+				"fontSize":"24",
+				"id":"do_Button_4",
+				"text":"结束录音",
+				"type":"do_Button"
+			},
+			{
+				"bgColor":"818BD0FF",
+				"x":"45",
+				"width":"200",
+				"y":"545",
+				"fontSize":"24",
+				"id":"do_Button_5",
+				"text":"开始播放",
+				"type":"do_Button",
+				"height":"65"
+			},
+			{
+				"bgColor":"818BD0FF",
+				"x":"275",
+				"width":"200",
+				"y":"545",
+				"fontSize":"24",
+				"id":"do_Button_6",
+				"text":"暂停播放",
+				"type":"do_Button",
+				"height":"60"
+			},
+			{
+				"bgColor":"818BD0FF",
+				"x":"505",
+				"width":"200",
+				"y":"545",
+				"fontSize":"24",
+				"id":"do_Button_7",
+				"text":"继续播放",
+				"type":"do_Button",
+				"height":"60"
+			},
+			{
+				"bgColor":"D7D7D7FF",
+				"x":"176",
+				"width":"401",
+				"y":"645",
+				"fontSize":"24",
+				"id":"do_Button_8",
+				"text":"停止播放",
+				"type":"do_Button",
+				"height":"60"
+			},
+			{
+				"x":"86",
+				"width":"589",
+				"y":"830",
+				"fontSize":"34",
+				"id":"do_Label_3",
+				"text":"当前状态：没有操作",
+				"type":"do_Label"
 			}
 		],
 		"height":"1334"
