--- a/DO-API/source/view/SM/do_DateTimePicker/main.ui
+++ b/DO-API/source/view/SM/do_DateTimePicker/main.ui
@@ -1,1 +1,64 @@
-{"RootView":{"x":"0","width":"750","y":"0","type":"do_ALayout","height":"1334"}}
+{
+	"RootView":{
+		"x":"0",
+		"width":"750",
+		"y":"0",
+		"type":"do_ALayout",
+		"views":[
+			{
+				"bgColor":"BCBCBCFF",
+				"x":"150",
+				"width":"450",
+				"y":"260",
+				"fontSize":"24",
+				"id":"do_Button_1",
+				"text":"显示日期",
+				"type":"do_Button"
+			},
+			{
+				"x":"10",
+				"width":"730",
+				"y":"100",
+				"id":"do_Label_1",
+				"type":"do_Label"
+			},
+			{
+				"bgColor":"C8C8C8FF",
+				"x":"150",
+				"width":"450",
+				"y":"457",
+				"fontSize":"24",
+				"id":"do_Button_2",
+				"text":"显示日期与时间",
+				"type":"do_Button"
+			},
+			{
+				"bgColor":"C8C8C8FF",
+				"x":"150",
+				"width":"444",
+				"y":"642",
+				"id":"do_Button_3",
+				"text":"表示日期、星期及时间",
+				"type":"do_Button"
+			},
+			{
+				"bgColor":"C2C2C2FF",
+				"x":"164",
+				"width":"420",
+				"y":"845",
+				"id":"do_Button_4",
+				"type":"do_Button"
+			},
+			{
+				"x":"19",
+				"width":"719",
+				"y":"973",
+				"fontSize":"24",
+				"id":"do_Label_2",
+				"type":"do_Label",
+				"height":"-1"
+			}
+		],
+		"height":"1334"
+	}
+}
