--- a/DO-API/source/view/UI/do_ComboBox/main.ui
+++ b/DO-API/source/view/UI/do_ComboBox/main.ui
@@ -1,1 +1,133 @@
-{"RootView":{"x":"0","width":"750","y":"0","type":"do_ALayout","height":"1334"}}
+{
+	"RootView":{
+		"x":"0",
+		"width":"750",
+		"y":"0",
+		"type":"do_ALayout",
+		"views":[
+			{
+				"x":"10",
+				"width":"730",
+				"y":"100",
+				"fontSize":"24",
+				"id":"do_Label_1",
+				"text":"ComboBox：点击控件会弹出一个选择列表，单击选项即可选中",
+				"type":"do_Label"
+			},
+			{
+				"bgColor":"807330FF",
+				"x":"60",
+				"width":"200",
+				"y":"290",
+				"fontSize":"24",
+				"id":"do_ComboBox_1",
+				"type":"do_ComboBox",
+				"items":"上海,北京,广州",
+				"height":"70"
+			},
+			{
+				"textAlign":"center",
+				"x":"60",
+				"width":"200",
+				"y":"445",
+				"fontSize":"24",
+				"id":"do_ComboBox_3",
+				"type":"do_ComboBox",
+				"items":"上海,北京,广州",
+				"fontColor":"9D56ADFF",
+				"height":"70"
+			},
+			{
+				"textAlign":"right",
+				"x":"60",
+				"width":"200",
+				"y":"584",
+				"fontSize":"24",
+				"id":"do_ComboBox_4",
+				"type":"do_ComboBox",
+				"fontStyle":"bold",
+				"items":"上海,北京,广州",
+				"height":"70"
+			},
+			{
+				"x":"330",
+				"width":"304",
+				"y":"296",
+				"fontSize":"24",
+				"id":"do_Label_2",
+				"text":"常规左对齐含有背景色",
+				"type":"do_Label",
+				"height":"65"
+			},
+			{
+				"x":"330",
+				"width":"297",
+				"y":"460",
+				"fontSize":"24",
+				"id":"do_Label_3",
+				"text":"常规字体居中展示，彩色字体",
+				"type":"do_Label",
+				"height":"56"
+			},
+			{
+				"x":"330",
+				"width":"298",
+				"y":"590",
+				"fontSize":"24",
+				"id":"do_Label_4",
+				"text":"加粗字体右对齐",
+				"type":"do_Label",
+				"height":"57"
+			},
+			{
+				"x":"64",
+				"width":"200",
+				"y":"743",
+				"index":"2",
+				"fontSize":"24",
+				"id":"do_ComboBox_5",
+				"type":"do_ComboBox",
+				"items":"上海,北京,广州",
+				"height":"70"
+			},
+			{
+				"x":"330",
+				"width":"296",
+				"y":"752",
+				"fontSize":"24",
+				"id":"do_Label_5",
+				"text":"常规选中索引为2的一项",
+				"type":"do_Label",
+				"height":"68"
+			},
+			{
+				"bgColor":"B7705DFF",
+				"x":"10",
+				"width":"740",
+				"y":"870",
+				"id":"do_Label_6",
+				"type":"do_Label",
+				"height":"2"
+			},
+			{
+				"x":"73",
+				"width":"196",
+				"y":"934",
+				"fontSize":"24",
+				"id":"do_ComboBox_6",
+				"type":"do_ComboBox",
+				"height":"70"
+			},
+			{
+				"x":"15",
+				"width":"720",
+				"y":"1034",
+				"maxLines":"20",
+				"id":"do_Label_7",
+				"type":"do_Label",
+				"height":"-1"
+			}
+		],
+		"height":"1334"
+	}
+}
