--- a/DO-API/source/view/SM/do_App/main.ui
+++ b/DO-API/source/view/SM/do_App/main.ui
@@ -7,19 +7,34 @@
 		"views":[
 			{
 				"bgColor":"C3C3C3FF",
-				"x":"86",
+				"x":"255",
 				"width":"215",
-				"y":"252",
+				"y":"250",
+				"fontSize":"24",
 				"id":"do_Button_1",
-				"text":"打开",
-				"type":"do_Button"
+				"text":"打开page1",
+				"type":"do_Button",
+				"fontColor":"99961CFF"
 			},
 			{
-				"x":"27",
-				"width":"685",
-				"y":"108",
+				"x":"10",
+				"width":"730",
+				"y":"100",
+				"maxLines":"2",
+				"fontSize":"24",
 				"id":"do_Label_1",
+				"text":"这个是DeviceOne提供的基本应用类，通常在DeviceOne里开发的一个工程项目就是一个App实例。这个类负责页面Page的基本跳转，和App作用域内的数据共享等。",
 				"type":"do_Label"
+			},
+			{
+				"bgColor":"C3C3C3FF",
+				"x":"255",
+				"width":"215",
+				"y":"420",
+				"fontSize":"24",
+				"id":"do_Button_2",
+				"text":"关闭当前页面",
+				"type":"do_Button"
 			}
 		],
 		"height":"1334"
