--- a/DO-API/source/view/SM/do_App/page3.ui
+++ b/DO-API/source/view/SM/do_App/page3.ui
@@ -22,7 +22,7 @@
 				"y":"329",
 				"fontSize":"24",
 				"id":"do_Button_2",
-				"text":"返回到main",
+				"text":"返回到page1",
 				"type":"do_Button"
 			}
 		],
