--- a/DO-API/source/view/UI/do_BarcodeView/main.ui
+++ b/DO-API/source/view/UI/do_BarcodeView/main.ui
@@ -1,1 +1,63 @@
-{"RootView":{"x":"0","width":"750","y":"0","type":"do_ALayout","height":"1334"}}
+{
+	"RootView":{
+		"bgColor":"F7F7F722",
+		"x":"0",
+		"width":"750",
+		"y":"0",
+		"type":"do_ALayout",
+		"views":[
+			{
+				"bgColor":"FFFFFF20",
+				"x":"92",
+				"width":"540",
+				"y":"132",
+				"scanArea":"10,10,540,340",
+				"id":"do_BarcodeView_1",
+				"type":"do_BarcodeView",
+				"height":"340"
+			},
+			{
+				"bgColor":"C6C6C6FF",
+				"x":"129",
+				"width":"485",
+				"y":"635",
+				"fontSize":"24",
+				"id":"do_Button_1",
+				"text":"开始扫描",
+				"type":"do_Button",
+				"height":"76"
+			},
+			{
+				"bgColor":"DEDEDEFF",
+				"x":"138",
+				"width":"182",
+				"y":"761",
+				"fontSize":"24",
+				"id":"do_Button_2",
+				"text":"开启闪光灯",
+				"type":"do_Button",
+				"height":"76"
+			},
+			{
+				"bgColor":"DEDEDEFF",
+				"x":"406",
+				"width":"200",
+				"y":"761",
+				"fontSize":"24",
+				"id":"do_Button_3",
+				"text":"关闭闪光灯",
+				"type":"do_Button"
+			},
+			{
+				"x":"10",
+				"width":"730",
+				"y":"969",
+				"fontSize":"30",
+				"id":"do_Label_1",
+				"type":"do_Label",
+				"height":"-1"
+			}
+		],
+		"height":"1334"
+	}
+}
